// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/AdvancedCreateComment should match snapshot when cannot post 1`] = `
<UnifiedTextEditorForm
  canPost={false}
  caretPosition={12}
  currentUserId="zaktnt8bpbgu8mb6ez9k64r7sa"
  draft={
    Object {
      "fileInfos": Array [
        Object {},
        Object {},
        Object {},
      ],
      "message": "Test message",
      "uploadsInProgress": Array [
        Object {},
      ],
    }
  }
  emitTypingEvent={[Function]}
  errorClass={null}
  fileUploadRef={
    Object {
      "current": null,
    }
  }
  focusTextbox={[Function]}
  handleBlur={[Function]}
  handleChange={[Function]}
  handleEmojiClick={[Function]}
  handleFileUploadChange={[Function]}
  handleFileUploadComplete={[Function]}
  handleGifClick={[Function]}
  handleMouseUpKeyUp={[Function]}
  handlePostError={[Function]}
  handleSubmit={[Function]}
  handleUploadError={[Function]}
  handleUploadStart={[Function]}
  hideEmojiPicker={[Function]}
  isFormattingBarHidden={false}
  loadNextMessage={[Function]}
  loadPrevMessage={[Function]}
  location="RHS_COMMENT"
  message="Test message"
  onEditLatestPost={[Function]}
  onMessageChange={[Function]}
  postId=""
  removePreview={[Function]}
  saveDraft={[Function]}
  serverError={null}
  setShowPreview={[Function]}
  shouldShowPreview={false}
  showEmojiPicker={false}
  textEditorChannel={
    Object {
      "id": "g6139tbospd18cmxroesdk3kkc",
    }
  }
  textboxRef={
    Object {
      "current": null,
    }
  }
  toggleAdvanceTextEditor={[Function]}
  toggleEmojiPicker={[Function]}
/>
`;

exports[`components/AdvancedCreateComment should match snapshot, comment with message 1`] = `
<UnifiedTextEditorForm
  canPost={true}
  caretPosition={12}
  currentUserId="zaktnt8bpbgu8mb6ez9k64r7sa"
  draft={
    Object {
      "fileInfos": Array [],
      "message": "Test message",
      "uploadsInProgress": Array [],
    }
  }
  emitTypingEvent={[Function]}
  errorClass={null}
  fileUploadRef={
    Object {
      "current": null,
    }
  }
  focusTextbox={[Function]}
  handleBlur={[Function]}
  handleChange={[Function]}
  handleEmojiClick={[Function]}
  handleFileUploadChange={[Function]}
  handleFileUploadComplete={[Function]}
  handleGifClick={[Function]}
  handleMouseUpKeyUp={[Function]}
  handlePostError={[Function]}
  handleSubmit={[Function]}
  handleUploadError={[Function]}
  handleUploadStart={[Function]}
  hideEmojiPicker={[Function]}
  isFormattingBarHidden={false}
  loadNextMessage={[Function]}
  loadPrevMessage={[Function]}
  location="RHS_COMMENT"
  message="Test message"
  onEditLatestPost={[Function]}
  onMessageChange={[Function]}
  postId=""
  removePreview={[Function]}
  saveDraft={[Function]}
  serverError={null}
  setShowPreview={[Function]}
  shouldShowPreview={false}
  showEmojiPicker={false}
  textEditorChannel={
    Object {
      "id": "g6139tbospd18cmxroesdk3kkc",
    }
  }
  textboxRef={
    Object {
      "current": null,
    }
  }
  toggleAdvanceTextEditor={[Function]}
  toggleEmojiPicker={[Function]}
/>
`;

exports[`components/AdvancedCreateComment should match snapshot, empty comment 1`] = `
<UnifiedTextEditorForm
  canPost={true}
  caretPosition={0}
  currentUserId="zaktnt8bpbgu8mb6ez9k64r7sa"
  draft={
    Object {
      "fileInfos": Array [],
      "message": "",
      "uploadsInProgress": Array [],
    }
  }
  emitTypingEvent={[Function]}
  errorClass={null}
  fileUploadRef={
    Object {
      "current": null,
    }
  }
  focusTextbox={[Function]}
  handleBlur={[Function]}
  handleChange={[Function]}
  handleEmojiClick={[Function]}
  handleFileUploadChange={[Function]}
  handleFileUploadComplete={[Function]}
  handleGifClick={[Function]}
  handleMouseUpKeyUp={[Function]}
  handlePostError={[Function]}
  handleSubmit={[Function]}
  handleUploadError={[Function]}
  handleUploadStart={[Function]}
  hideEmojiPicker={[Function]}
  isFormattingBarHidden={false}
  loadNextMessage={[Function]}
  loadPrevMessage={[Function]}
  location="RHS_COMMENT"
  message=""
  onEditLatestPost={[Function]}
  onMessageChange={[Function]}
  postId=""
  removePreview={[Function]}
  saveDraft={[Function]}
  serverError={null}
  setShowPreview={[Function]}
  shouldShowPreview={false}
  showEmojiPicker={false}
  textEditorChannel={
    Object {
      "id": "g6139tbospd18cmxroesdk3kkc",
    }
  }
  textboxRef={
    Object {
      "current": null,
    }
  }
  toggleAdvanceTextEditor={[Function]}
  toggleEmojiPicker={[Function]}
/>
`;

exports[`components/AdvancedCreateComment should match snapshot, non-empty message and uploadsInProgress + fileInfos 1`] = `
<UnifiedTextEditorForm
  canPost={true}
  caretPosition={12}
  currentUserId="zaktnt8bpbgu8mb6ez9k64r7sa"
  draft={
    Object {
      "fileInfos": Array [
        Object {},
        Object {},
        Object {},
      ],
      "message": "Test message",
      "uploadsInProgress": Array [
        Object {},
      ],
    }
  }
  emitTypingEvent={[Function]}
  errorClass={null}
  fileUploadRef={
    Object {
      "current": null,
    }
  }
  focusTextbox={[Function]}
  handleBlur={[Function]}
  handleChange={[Function]}
  handleEmojiClick={[Function]}
  handleFileUploadChange={[Function]}
  handleFileUploadComplete={[Function]}
  handleGifClick={[Function]}
  handleMouseUpKeyUp={[Function]}
  handlePostError={[Function]}
  handleSubmit={[Function]}
  handleUploadError={[Function]}
  handleUploadStart={[Function]}
  hideEmojiPicker={[Function]}
  isFormattingBarHidden={false}
  loadNextMessage={[Function]}
  loadPrevMessage={[Function]}
  location="RHS_COMMENT"
  message="Test message"
  onEditLatestPost={[Function]}
  onMessageChange={[Function]}
  postId=""
  removePreview={[Function]}
  saveDraft={[Function]}
  serverError={null}
  setShowPreview={[Function]}
  shouldShowPreview={false}
  showEmojiPicker={false}
  textEditorChannel={
    Object {
      "id": "g6139tbospd18cmxroesdk3kkc",
    }
  }
  textboxRef={
    Object {
      "current": null,
    }
  }
  toggleAdvanceTextEditor={[Function]}
  toggleEmojiPicker={[Function]}
/>
`;
